# SOEM

./: .gitignore  CMakeLists.txt
Nucleo_program/: 20210827.cpp  PDO_read_20210901.cpp  README.md
Nucleo_program/LAN9252/: LAN9252.cpp  LAN9252.h
Nucleo_program/LAN925X_SPI/: LAN925X_SPI.cpp  LAN925X_SPI.h
test/linux/GoldTwitter/: CMakeLists.txt  PD_control.c  README.md  dualmotor_read.c  read_motor.c  test_program.c  torque_control.c
test/linux/GoldTwitter_Torque/: CMakeLists.txt  GoldTwitter_Torque.c  README.md
test/linux/GoldTwitter_transmit/: CMakeLists.txt  GoldTwitter_transmit.c  README.md
test/linux/GoldWhistle_example/: CMakeLists.txt  README.md
test/linux/IRL-LW_HogeSlave/: CMakeLists.txt  HogeSlave.c  HogeSlave.h  HogeSlave_PDO_write_20210901.c  IRL-LW_HogeSlave.xml  README.md
test/linux/Impedance_control/: CMakeLists.txt  Impedance_control.c  README.md
test/linux/PDO_transmit/: CMakeLists.txt  PDO_transmit.c  README.md
test/linux/ebox/: CMakeLists.txt  ebox.c
test/linux/position_control/: CMakeLists.txt  README.md  position_control.c  test_program.c
test/linux/simple_test/: simple_test.c
